# gtk3-for-fun

./: LICENSE  README.md
3D/: icosahedron.stl
calc/: Makefile  calc.c  calc.h
clock/: Makefile  clock.c  meson.build
gtk3gl-qt-demo/: fragment.glsl  glmath.h  main.c  meson.build  shader.gresource.xml  vertex.glsl  vertices.c  vertices.h
rgb/: Makefile  e24.c  meson.build  resistor.c  rgb.c
scribble/: Makefile  meson.build  scribble.c
torus/: glmath.h  main.c  torus.c  vertex.h
window/: Makefile  meson.build  window.c
